--- a/einleitung.mdx
+++ b/einleitung.mdx
@@ -1,19 +1,10 @@
 ---
-title: "Introduction"
-description: "Welcome to the home of your new documentation"
+title: "Einleitung & Inhaltsverzeichnis"
+description: "Eine Übersicht mit Beschreibung aller vorhandenen Funktionen."
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
 
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+![Stable Jp](/images/stable.jpg)
 
 ## Setting up
 
