Documentation edits made through Mintlify web editor

--- a/einleitung.mdx
+++ b/einleitung.mdx
@@ -3,8 +3,7 @@ title: "Einleitung & Inhaltsverzeichnis"
 description: "Eine Übersicht mit Beschreibung aller vorhandenen Funktionen."
 ---
 
-
-![Stable Jp](/images/stable.jpg)
+![Nxt Core Pn](/images/NxtCore.png)
 
 ## Setting up
 
