Documentation edits made through Mintlify web editor

--- a/einleitung.mdx
+++ b/einleitung.mdx
@@ -1,38 +1,39 @@
 ---
-title: "Einleitung & Inhaltsverzeichnis"
-description: "Eine Übersicht mit Beschreibung aller vorhandenen Funktionen."
+title: "Einleitung"
+description: "Dokumentation zum Turniersystem von NxtCore"
 ---
 
 ![Nxt Core Pn](/images/NxtCore.png)
 
-## Setting up
+## Aufbau der Dokumentation
 
-The first step to world-class documentation is setting up your editing environments.
+Alle Funktionen werden ausführlich erklärt und beschrieben.
 
 <CardGroup cols={2}>
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
+  <Card title="Inhaltsverzeichnis" icon="list" horizontal href="/inhaltsverzeichnis">
+    Alle funktionen sind im jeweiligen Abschnitt. Das erleichtert die Suche diverser Funktionen.
   </Card>
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
+  <Card title="Suchfunktion" icon="magnifying-glass" horizontal>
+    Es kann zusätzlich die Suchfunktion zum suchen von spezifischen Angaben im der Dokumentation genutzt werden.
   </Card>
 </CardGroup>
 
-## Make it yours
+## Weitere wichtige Informationen
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Diese Dokumentationsplattform bietet weitere Informationen zu diversen Themen.
 
 <CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
+  <Card title="NxtCore Turnierplattform" icon="circle-info" horizontal href="/Turnierplattform">
+    Vollständige Dokumentation zur Turnierplattform.
   </Card>
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
+  <Card title="NxtCore Tournament API" icon="code" horizontal href="https://mintlify.com/docs/api-playground/openapi">
+    Text darf Henrik ausfüllen
+
+    LALALALA
   </Card>
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
+  <Card title="Discord Bot" icon="user-robot" horizontal href="discordbot">
+    Alle Informationen zum NxtCore Discord Bot
+
+    mit Dokumentation.
   </Card>
 </CardGroup>
