Documentation edits made through Mintlify web editor

--- a/einleitung.mdx
+++ b/einleitung.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Einleitung"
-description: "Dokumentation zum Turniersystem von NxtCore"
+description: "Dokumentation zu Projekten von NxtCore"
 ---
 
 ![Nxt Core Pn](/images/NxtCore.png)
@@ -11,29 +11,25 @@ Alle Funktionen werden ausführlich erklärt und beschrieben.
 
 <CardGroup cols={2}>
   <Card title="Inhaltsverzeichnis" icon="list" horizontal href="/inhaltsverzeichnis">
-    Alle funktionen sind im jeweiligen Abschnitt. Das erleichtert die Suche diverser Funktionen.
+    Alle Funktionen sind im jeweiligen Abschnitt. Das erleichtert die Suche diverser Funktionen.
   </Card>
   <Card title="Suchfunktion" icon="magnifying-glass" horizontal>
-    Es kann zusätzlich die Suchfunktion zum suchen von spezifischen Angaben im der Dokumentation genutzt werden.
+    Es kann zusätzlich die Suchfunktion zum Suchen von spezifischen Angaben in der Dokumentation genutzt werden.
   </Card>
 </CardGroup>
 
-## Weitere wichtige Informationen
+## Dokumentationen auf dieser Plattform
 
-Diese Dokumentationsplattform bietet weitere Informationen zu diversen Themen.
+Diese Dokumentationsplattform bietet Informationen zu folgenden Projekten.
 
 <CardGroup cols={2}>
   <Card title="NxtCore Turnierplattform" icon="circle-info" horizontal href="/Turnierplattform">
     Vollständige Dokumentation zur Turnierplattform.
   </Card>
   <Card title="NxtCore Tournament API" icon="code" horizontal href="https://mintlify.com/docs/api-playground/openapi">
-    Text darf Henrik ausfüllen
-
-    LALALALA
+    OpenAPI Dokumentation für die Turnierplattform
   </Card>
   <Card title="Discord Bot" icon="user-robot" horizontal href="discordbot">
-    Alle Informationen zum NxtCore Discord Bot
-
-    mit Dokumentation.
+    Alle Informationen zum NxtCore Discord Bot mit Dokumentation.
   </Card>
 </CardGroup>
