Documentation edits made through Mintlify web editor

--- a/einleitung.mdx
+++ b/einleitung.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Einleitung"
 description: "Dokumentation zu Projekten von NxtCore"
+mode: "wide"
 ---
 
 ![Nxt Core Pn](/images/NxtCore.png)
