Documentation edits made through Mintlify web editor

--- a/einleitung.mdx
+++ b/einleitung.mdx
@@ -4,7 +4,7 @@ description: "Dokumentation zu Projekten von NxtCore"
 mode: "wide"
 ---
 
-![Nxt Core Pn](/images/NxtCore.png)
+![Nxt Core Pn](/images/NxtCoresmall.png)
 
 ## Aufbau der Dokumentation
 
