Documentation edits made through Mintlify web editor

--- a/inhaltsverzeichnis.mdx
+++ b/inhaltsverzeichnis.mdx
@@ -1,5 +1,5 @@
 ---
-title: "NxtCore Tournaments - Documentation"
+title: "NxtCore Tournaments - Inhaltsverzeichnis"
 description: "Eine Übersicht mit Beschreibung aller vorhandenen Funktionen."
 mode: "wide"
 ---
