Documentation edits made through Mintlify web editor

--- a/nxtcore-benutzeroberflaeche.mdx
+++ b/nxtcore-benutzeroberflaeche.mdx
@@ -13,7 +13,7 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
 
   ![Reguebersicht Pn](/images/reguebersicht.png)
 
-  **Bei Auswahl "Mit E-Mail Adresse" bitte direkt zu Schritt 2 - Allgemeines übergehen. **
+  \*\*Bei Auswahl "Mit E-Mail Adresse" bitte direkt zu Schritt 2 - Allgemeines übergehen. \*\*
 
   <AccordionGroup>
     <Accordion title="Registrierung über Riot Account" description="Schritt 1 - Riot Account - Login / OAuth" icon="sparkles">
@@ -104,6 +104,17 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
 <Accordion title="Login / Benutzerkonto Bearbeiten" icon="sparkles">
   **Erklärung der einzelnen Möglichkeiten zur Bearbeitung des Benutzerkontos**
 
+  <Accordion title="Login" description="In das Benutzerkonto einloggen" icon="sparkles">
+    Der Login ist möglich mit:
+
+    - E-Mail Adresse
+    - Discord Account
+    - Riot Games Account
+    - ~~Google Account ~~\
+      <sup>Aktuell nicht verfügbar</sup>
+
+      ![Loginubersicht Pn](/images/loginubersicht.png)
+  </Accordion>
   Nach dem Login ist nachfolgende Ansicht zu sehen:
 
   <AccordionGroup>
