--- a/einleitung.mdx
+++ b/einleitung.mdx
@@ -13,7 +13,7 @@ Alle Funktionen werden ausführlich erklärt und beschrieben.
   <Card title="Inhaltsverzeichnis" icon="list" horizontal href="/inhaltsverzeichnis">
     Alle Funktionen sind im jeweiligen Abschnitt. Das erleichtert die Suche diverser Funktionen.
   </Card>
-    <Card title="Suchfunktion" icon="magnifying-glass" horizontal>
+  <Card title="Suchfunktion" icon="magnifying-glass" horizontal>
     Es kann zusätzlich die Suchfunktion zum Suchen von spezifischen Angaben in der Dokumentation genutzt werden.
   </Card>
 </CardGroup>
@@ -23,7 +23,7 @@ Alle Funktionen werden ausführlich erklärt und beschrieben.
 Diese Dokumentationsplattform bietet Informationen zu folgenden Projekten.
 
 <CardGroup cols={2}>
-  <Card title="NxtCore Turnierplattform" icon="circle-info" horizontal href="/Turnierplattform">
+  <Card title="NxtCore Turnierplattform" icon="circle-info" horizontal href="/nxtcore-benutzeroberflaeche">
     Vollständige Dokumentation zur Turnierplattform.
   </Card>
   <Card title="NxtCore Tournament API" icon="code" horizontal href="https://mintlify.com/docs/api-playground/openapi">
