--- a/nxtcore-inhaltsverzeichnis.mdx
+++ b/nxtcore-inhaltsverzeichnis.mdx
@@ -9,8 +9,17 @@ mode: "wide"
 1. Benutzeroberfläche
    1. Benutzerkonto
       1. Registrierung / Benutzerkonto anlegen
-         1. Via E-Mail
-         2. Via Discord Login
-         3. Via Riot Login
-         4. Via Google Login
-2. 
+         - Via E-Mail
+         - Via Discord Login
+         - Via Riot Login
+         - Via Google Logins
+      2. Login / Benutzerkonto bearbeiten
+         - Login\
+           <sup>In das Benutzerkonto einloggen</sup>
+         - Benutzerkonto aufrufen\
+           <sup>Zur Übersicht "Benutzerkonto" wechseln</sup>
+         - Erklärung der Menüpunkte im Benutzerkonto
+           - Übersicht
+           - Verbindungen
+           - Teams
+           - Einladungen
