Documentation edits made through Mintlify web editor

--- a/nxtcore-benutzeroberflaeche.mdx
+++ b/nxtcore-benutzeroberflaeche.mdx
@@ -249,7 +249,7 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
           ![Erstelltuebersicht Pn](/images/erstelltuebersicht.png)
         </Accordion>
         <Accordion title="Bearbeiten" description='Erklärung der Schaltfläche "Bearbeiten"' icon="pencil">
-          Über die Schaltfläche \*\*"<Icon icon="pencil" color="#ffffff" /> Bearbeiten" \*\*kann das Team bearbeitet werden.\
+          Über die Schaltfläche **"<Icon icon="pencil" color="#ffffff" /> Bearbeiten"** kann das Team bearbeitet werden.\
           \
           Nachfolgend werden die Menüpunkte im Bearbeitungsmodus des "Teams" erklärt.\
           Die hier zusehenden Tabs sind auch im Profil vorhanden.
@@ -302,7 +302,7 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
                 <Accordion title="Slug" description='Erklärung des Eingabefelds "Slug".' icon="user-hair">
                   Der Slug kann nicht selbst bearbeitet werden.
 
-                  Der Slug ist ein benutzerfreundlicher, eindeutiger Identifikator, der als Alternative zu einer numerischen ID für eine Ressource verwendet wird.\\
+                  Der Slug ist ein benutzerfreundlicher, eindeutiger Identifikator, der als Alternative zu einer numerischen ID für eine Ressource verwendet wird.
 
                   Er dient in diesem Fall dazu, das Benutzerkonto klar und eindeutig zu kennzeichnen.
                 </Accordion>
@@ -323,14 +323,37 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
               </AccordionGroup>
             </Tab>
             <Tab title="Mitglieder">
-              
+              Im Tab "Mitglieder" können die Mitglieder des Teams angesehen und verwaltet werden.\
+              \
+              Alle Mitglieder mit den Rollen "Manager" oder "Spieler/Manager" können Veränderungen vornehmen.\
+              \
+              Über die Schaltfläche "Suchen" auf der linken Seite, können neue potenzielle Mitglieder in das Team eingeladen werden. (Im Bild gelb hervorgehoben)
+
+              ![Mitgliedersuchen Pn](/images/mitgliedersuchen.png)
+
+              Darunter sind alle, im Team befindlichen Mitglieder, aufgelistet.\
+              Funktionen von links nach rechts:
+
+              - Profilbild
+              - Nickname
+              - Slug (klein geschrieben)
+              - Auswahlmenü "Rolle" zuweisen
+              - Schaltfläche "Teamowner setzen" 
+              - Schaltfläche "Aus Team entfernen"\
+                \
+                Die einzelnen Funktionen sind unter \
+                Benutzeroberfläche -\> Login / Benutzerkonto bearbeiten -\> TAB "Teams" \
+                -\> <Icon icon="pencil" color="#ffffff" /> Bearbeiten -\> TAB "Übersicht" erklärt.\
+                (<Icon icon="link" iconType="solid" color="#ffffff" /> Direktlink zur Erklärung)
             </Tab>
             <Tab title="Einladungen">
-              
+              sdfsdfsdf
             </Tab>
           </Tabs>
         </Accordion>
       </AccordionGroup>
+      \
+      Mit dem Klicken auf die Schaltfläche **" Verlassen"** kann das Team verlassen werden.
     </Tab>
     <Tab title="Einladungen">
       dfsdfsdf
