Documentation edits made through Mintlify web editor

--- a/nxtcore-benutzeroberflaeche.mdx
+++ b/nxtcore-benutzeroberflaeche.mdx
@@ -249,7 +249,7 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
           ![Erstelltuebersicht Pn](/images/erstelltuebersicht.png)
         </Accordion>
         <Accordion title="Bearbeiten" description='Erklärung der Schaltfläche "Bearbeiten"' icon="pencil">
-          Über die Schaltfläche **"<Icon icon="pencil" color="#ffffff" /> Bearbeiten"** kann das Team bearbeitet werden.\
+          Über die Schaltfläche **" Bearbeiten"** kann das Team bearbeitet werden.\
           \
           Nachfolgend werden die Menüpunkte im Bearbeitungsmodus des "Teams" erklärt.\
           Die hier zusehenden Tabs sind auch im Profil vorhanden.
@@ -338,13 +338,12 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
               - Nickname
               - Slug (klein geschrieben)
               - Auswahlmenü "Rolle" zuweisen
-              - Schaltfläche "Teamowner setzen" 
-              - Schaltfläche "Aus Team entfernen"\
-                \
-                Die einzelnen Funktionen sind unter \
-                Benutzeroberfläche -\> Login / Benutzerkonto bearbeiten -\> TAB "Teams" \
-                -\> <Icon icon="pencil" color="#ffffff" /> Bearbeiten -\> TAB "Übersicht" erklärt.\
-                (<Icon icon="link" iconType="solid" color="#ffffff" /> Direktlink zur Erklärung)
+              - Schaltfläche "Teamowner setzen"
+              - Schaltfläche "Aus Team entfernen"
+
+              Die einzelnen Funktionen sind unter \
+              Benutzeroberfläche -\> Login / Benutzerkonto bearbeiten -\> TAB "Teams" \
+              -\> <Icon icon="pencil" iconType="solid" color="#ffffff" /> Bearbeiten -\> TAB "Übersicht" erklärt.
             </Tab>
             <Tab title="Einladungen">
               sdfsdfsdf
@@ -356,7 +355,9 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
       Mit dem Klicken auf die Schaltfläche **" Verlassen"** kann das Team verlassen werden.
     </Tab>
     <Tab title="Einladungen">
-      dfsdfsdf
+      Hier findest du von einem Team an dich versendete Einladungen
+
+      ![Einladungvonteam Pn](/images/einladungvonteam.png)
     </Tab>
   </Tabs>
 </Accordion>
