--- a/nxtcore-inhaltsverzeichnis.mdx
+++ b/nxtcore-inhaltsverzeichnis.mdx
@@ -6,20 +6,41 @@ mode: "wide"
 
 ### Inhaltsverzeichnis
 
-1. Benutzeroberfläche
-   1. Benutzerkonto
-      1. Registrierung / Benutzerkonto anlegen
-         - Via E-Mail
-         - Via Discord Login
-         - Via Riot Login
-         - Via Google Logins
-      2. Login / Benutzerkonto bearbeiten
-         - Login\
-           <sup>In das Benutzerkonto einloggen</sup>
-         - Benutzerkonto aufrufen\
-           <sup>Zur Übersicht "Benutzerkonto" wechseln</sup>
-         - Erklärung der Menüpunkte im Benutzerkonto
-           - Übersicht
-           - Verbindungen
-           - Teams
-           - Einladungen
+Benutzeroberfläche
+
+Benutzerkonto
+
+<Accordion title="Registrierung / Benutzerkonto anlegen" description="Auflistung der Inhalte zur Registrierung" icon="sparkles">
+  - Via E-Mail
+  - Via Discord Login
+  - Via Riot Login
+  - Via Google Logins
+</Accordion>
+
+<Accordion title="Login / Benutzerkonto bearbeiten" description="Auflistung der Inhalte zum Login und zum Bearbeiten des Benutzerkontos" icon="sparkles">
+  Inhalte in chronologischer Reihenfolge aufgeführt.
+
+  - Login\
+    <sup>In das Benutzerkonto einloggen</sup>
+  - Benutzerkonto aufrufen\
+    <sup>Zur Übersicht "Benutzerkonto" wechseln</sup>
+  - Erklärung der Menüpunkte im Benutzerkonto
+
+    \
+    <u>Horizontales Menü "Tabs"</u>
+  - Übersicht
+    - Avatar
+    - Banner
+    - Username
+    - Slug
+    - Mail
+  - Verbindungen
+    - Diverse Verknüpfungen erklärt
+  - Teams
+    - Übersicht
+    - Teams Suchen
+    - Team Erstellen
+    - Team Bearbeiten
+  - Einladungen
+    - Übersicht Einladungen Team an Spieler
+</Accordion>
