Documentation edits made through Mintlify web editor

--- a/nxtcore-benutzeroberflaeche.mdx
+++ b/nxtcore-benutzeroberflaeche.mdx
@@ -153,12 +153,12 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
         Er dient in diesem Fall dazu, das Benutzerkonto klar und eindeutig zu kennzeichnen.
 
         ![Benutzerkonto Slug Pn](/images/benutzerkonto-slug.png)
-      - \*\*Mail: \*\*Über die Schaltfläche "Mail" kann die E-Mailadresse bearbeitet oder die Verifizierungsmail erneut versendet werden.\
+      - **Mail:** Über die Schaltfläche "Mail" kann die E-Mailadresse bearbeitet oder die Verifizierungsmail erneut versendet werden.\
         So ist das ändern oder korrigieren der E-Mailadresse möglich.\
         Aber auch das erneute versenden einer Verifizierungsmail, sollte diese im Postfach nicht angekommen sein. **Bitte auch in den Spam-Ordner schauen.**
 
         ![Benutzerkonto Email Pn](/images/benutzerkonto-email.png)
-      - \*\*Speichern: \*\*Alle Änderungen müssen über das Klicken auf die Schaltfläche "Speichern" bestätigt werden.
+      - **Speichern: **Alle Änderungen müssen über das Klicken auf die Schaltfläche "Speichern" bestätigt werden.
 
         ![Benutzerkonto Aenderungspeichern Pn](/images/benutzerkonto-aenderungspeichern.png)
     </Tab>
