--- a/nxtcore-inhaltsverzeichnis.mdx
+++ b/nxtcore-inhaltsverzeichnis.mdx
@@ -28,19 +28,26 @@ Benutzerkonto
 
     \
     <u>Horizontales Menü "Tabs"</u>
-  - Übersicht
-    - Avatar
-    - Banner
-    - Username
-    - Slug
-    - Mail
-  - Verbindungen
-    - Diverse Verknüpfungen erklärt
-  - Teams
-    - Übersicht
-    - Teams Suchen
-    - Team Erstellen
-    - Team Bearbeiten
-  - Einladungen
-    - Übersicht Einladungen Team an Spieler
+
+    <Tabs>
+      <Tab title="Übersicht">
+        - Avatar
+        - Banner
+        - Username
+        - Slug
+        - Mail
+      </Tab>
+      <Tab title="Verbindungen">
+        - Erklärung diverser Verknüpfungen
+      </Tab>
+      <Tab title="Teams">
+        - Übersicht
+        - Teams Suchen
+        - Team Erstellen
+        - Team Bearbeiten
+      </Tab>
+      <Tab title="Einladungen">
+        - Übersicht Einladungen Team an Spieler
+      </Tab>
+    </Tabs>
 </Accordion>
