Documentation edits made through Mintlify web editor

--- a/nxtcore-benutzeroberflaeche.mdx
+++ b/nxtcore-benutzeroberflaeche.mdx
@@ -158,7 +158,7 @@ description: "Beschreibung aller Funktionen in der Benutzeroberfläche"
         Aber auch das erneute versenden einer Verifizierungsmail, sollte diese im Postfach nicht angekommen sein. **Bitte auch in den Spam-Ordner schauen.**
 
         ![Benutzerkonto Email Pn](/images/benutzerkonto-email.png)
-      - **Speichern: **Alle Änderungen müssen über das Klicken auf die Schaltfläche "Speichern" bestätigt werden.
+      - \*\*Speichern: \*\*Alle Änderungen müssen über das Klicken auf die Schaltfläche "Speichern" bestätigt werden.
 
         ![Benutzerkonto Aenderungspeichern Pn](/images/benutzerkonto-aenderungspeichern.png)
     </Tab>
