--- a/nxtcore-inhaltsverzeichnis.mdx
+++ b/nxtcore-inhaltsverzeichnis.mdx
@@ -4,11 +4,11 @@ description: "Eine Übersicht mit Beschreibung aller vorhandenen Funktionen."
 mode: "wide"
 ---
 
-### Inhaltsverzeichnis
+# Inhaltsverzeichnis
 
-Benutzeroberfläche
+## Benutzeroberfläche
 
-Benutzerkonto
+### Benutzerkonto:
 
 <Accordion title="Registrierung / Benutzerkonto anlegen" description="Auflistung der Inhalte zur Registrierung" icon="sparkles">
   - Via E-Mail
@@ -51,3 +51,5 @@ Benutzerkonto
       </Tab>
     </Tabs>
 </Accordion>
+
+### Frontpage & Turniere:
