Documentation edits made through Mintlify web editor

--- a/nxtcore-WLfrontpage.mdx
+++ b/nxtcore-WLfrontpage.mdx
@@ -3,22 +3,32 @@ title: "Frontpage / Turnierseite"
 description: "Beschreibung aller Funktionen auf der Frontpage und den Turnierseiten."
 ---
 
-Navigation:\
-\
-mit dem Klick auf "Turniere & Ligen" öffnet sich die Turnierübersicht
 
-![Frontpagenav Pn](/images/frontpagenav.png)
+<Accordion title="Navigation der Turnier-Übersicht" description="Eine Übersicht durch die Navigation der Turnier-Seite." icon="sparkles">
+  mit dem Klick auf "Turniere & Ligen" öffnet sich die Turnierübersicht
 
-Dort sind die aktuellen Turniere & Ligen zu finden.\
-Durch das herunterscrollen auf der Seite, können diverse Turniere gefunden werden.
+  ![Frontpagenav Pn](/images/frontpagenav.png)
 
-![Scrolldownfrontpage Pn](/images/scrolldownfrontpage.png)
+  Dort sind die aktuellen Turniere & Ligen zu finden.\
+  Durch das herunterscrollen auf der Seite, können diverse Turniere gefunden werden.\
+  \
+  Über die Icons in der rechten oberen Ecke gelangt ihr auf:\
+  <sup>(von links nach rechts)</sup>
 
-Hier sind die aktuellen Turniere zu finden.\
-Diese sind chronologisch nach Datum sortiert.\
-Es ist zudem immer das Spiel, der Spielmodus und ein Turniertitel zu sehen.
+  - das eigene Userprofil oder zur Registrierung / zum Login
+  - den Werkliga Discord-Server
+  - den Werksliga Twitch-Kanal
 
-![Turnieruebersichtfrontpage Pn](/images/turnieruebersichtfrontpage.png)
+  ![Scrolldownfrontpage Pn](/images/scrolldownfrontpage.png)
+
+  Hier sind die aktuellen Turniere zu finden.\
+  Diese sind chronologisch nach Datum sortiert.\
+  Es ist zudem immer das Spiel, der Spielmodus und ein Turniertitel zu sehen.
+
+  ![Turnieruebersichtfrontpage Pn](/images/turnieruebersichtfrontpage.png)
+
+  Mit einem Klick auf das jeweilige Turnier, öffnet sich die Turnierseite.
+</Accordion>
 
 <Accordion title="Turnierseite" description="Beschreibung aller Funktionen auf der Turnierseite" icon="sparkles">
   Nach dem Klicken auf ein Turnier auf der Frontpage öffnet sich die Turnierseite.
@@ -31,8 +41,7 @@ Es ist zudem immer das Spiel, der Spielmodus und ein Turniertitel zu sehen.
   - Check-In
   - Late Registration
 
-  **Hierbei ist immer das jeweilige Zeitfenster der genannten Option zu beachten.\
-  Die Schaltflächen können nur im jeweiligen Zeitfenster angeklickt werden.**\
+  **Hierbei ist immer das jeweilige Zeitfenster der genannten Option zu beachten.Die Schaltflächen können nur im jeweiligen Zeitfenster angeklickt werden.**\
   Das Zeitfenster ist im Sub-Text der jeweiligen Schaltfläche zu finden:
 
   ![Turnierseitezeitfenster Pn](/images/turnierseitezeitfenster.png)
