Documentation edits made through Mintlify web editor

--- a/nxtcore-WLfrontpage.mdx
+++ b/nxtcore-WLfrontpage.mdx
@@ -3,8 +3,7 @@ title: "Frontpage / Turnierseite"
 description: "Beschreibung aller Funktionen auf der Frontpage und den Turnierseiten."
 ---
 
-
-<Accordion title="Navigation der Turnier-Übersicht" description="Eine Übersicht durch die Navigation der Turnier-Seite." icon="sparkles">
+<Accordion title="Navigation der Turnier-Übersicht" description="Eine Übersicht für die Navigation auf der Turnier-Seite." icon="sparkles">
   mit dem Klick auf "Turniere & Ligen" öffnet sich die Turnierübersicht
 
   ![Frontpagenav Pn](/images/frontpagenav.png)
