--- a/nxtcore-WLinhaltsverzeichnis.mdx
+++ b/nxtcore-WLinhaltsverzeichnis.mdx
@@ -53,3 +53,33 @@ mode: "wide"
 </Accordion>
 
 ### Frontpage & Turniere:
+
+<Accordion title="Navigation der Turnier-Übersicht." description="Eine Übersicht für die Navigation auf der Turnier-Seite." icon="sparkles">
+  - Kurze Führung über die Startseite
+  - Beschreibung der Funktionen in folgender Reihenfolge:
+    - Klick auf "Turniere & Ligen"
+    - Icons "oben rechts"
+      - Zum Profil / Registrieren / Login
+      - Discord-Verlinkung
+      - Twitch-Verlinkung
+    - Aktuelle Turnierübersicht
+      - Erklärung der Übersicht
+      - "Wie gelange ich auf die Turnierseite"
+</Accordion>
+
+<Accordion title="Turnierseite" description="Beschreibung aller Funktionen auf der Turnierseite" icon="sparkles">
+  Beschreibung der Funktionen in folgender Reihenfolge:
+
+  - Erklärung der Schaltflächen "rechts oben":
+    - Registrieren
+    - Check-In
+    - Late Registration
+  - Erklärung Zeitfenster der jeweiligen Schaltflächen
+  - Erklärung Beschreibung
+  - Erklärung Icons auf der linken Seite
+    - <Icon icon="house-chimney" /> Informationen
+    - <Icon icon="trophy" /> Turnierbaum- / Liga-Übersicht
+    - <Icon icon="scale-balanced" /> Regelwerk
+</Accordion>
+
+### Admin-Oberfläche:
